[package]
name = "rustub"
version = "0.1.0"
authors = ["github.com/iffyio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
log = "0.4.8"

[dependencies.simple_logger]
version = "1.3.0"
default-features = false
